apps/web-client/src/app/app.component.less
#app-top-bar {
  @apply h-16 p-2 md:px-4 flex items-center gap-4 z-10 sticky top-0 bg-white transition-all
    shadow;
  
  &.dark {
    @apply bg-secondary-950 text-white;
  }
}

#app-sidenav {
  @apply !top-16;

  --mat-sidenav-container-background-color: theme('colors.white');

  &.mat-drawer-side {
    --mat-sidenav-container-divider-color: theme('colors.divider');
    --mat-sidenav-container-shape: theme('borderRadius.none');

  }
}

